Finished implementation for recurrences, next event generation, simulation.js file generation. Known issue: simulation statistics not displaying