@@ -1,6 +1,7 @@
 package generator;
 
 import java.util.List;
+import java.util.Map;
 
 public class CodeHelper {
 
@@ -12,7 +13,7 @@ public class CodeHelper {
     }
 
     public static String eventConstructor(String name, List<String> objects) {
-        StringBuilder result = new StringBuilder(String.format("class %s extends eVent { \n" +
+        StringBuilder result = new StringBuilder(String.format("class %s extends eVENT { \n" +
                 "   constructor({delay", name));
         for (String s : objects) {
             result.append(String.format(", %s", s));
@@ -62,9 +63,9 @@ public class CodeHelper {
 
         result.append("    static recurrence() {\n");
         if (recurrences.size() == 1) {
-            result.append(String.format("        return %s;\n", recurrences.getFirst()));
+            result.append(String.format("        return %s;\n", recurrences.get(0)));
         } else {
-            result.append(String.format("return math.getUniformRandomInteger(%s, %s);\n", recurrences.getFirst(), recurrences.get(1)));
+            result.append(String.format("return math.getUniformRandomInteger(%s, %s);\n", recurrences.get(0), recurrences.get(1)));
         }
         result.append("    }\n");
         return result;
@@ -81,6 +82,63 @@ public class CodeHelper {
             }
         }
         result.append("}));\n       }\n");
+        return result;
+    }
+
+    public static StringBuilder writeSimulationSetup(List<String> objectNames, List<String> eventNames, int timeLimit) {
+        StringBuilder result = new StringBuilder(String.format("sim.scenario.durationInSimTime = %s;\n", timeLimit));
+        result.append("sim.model.time = \"discrete\";\n");
+        result.append("sim.model.timeUnit = \"min\";\n\n");
+        result.append("sim.model.objectTypes = [");
+        for (int i = 0; i < objectNames.size(); i++) {
+            result.append(String.format("\"%s\"", objectNames.get(i)));
+            if (i < objectNames.size() - 1) {
+                result.append(", ");
+            }
+        }
+        result.append("];\n");
+        result.append("sim.model.eventTypes = [");
+        for (int i = 0; i < eventNames.size(); i++) {
+            result.append(String.format("\"%s\"", eventNames.get(i)));
+            if (i < eventNames.size() - 1) {
+                result.append(", ");
+            }
+        }
+        result.append("];\n");
+        result.append("sim.scenario.setupInitialState = function () {\n");
+        return result;
+    }
+
+    public static StringBuilder writeObjectDeclaration(List<String> objIds, Map<String, String> names) {
+        StringBuilder result = new StringBuilder();
+        for (String objId : objIds) {
+            String name = names.get(objId);
+            result.append(String.format("    var %s = new %s({id: %s, name: \"%s\"});\n",
+                    name, name, objId, name));
+        }
+        return result;
+    }
+
+    public static StringBuilder writeStartEvent(String eventName, List<String> arguments) {
+        StringBuilder result = new StringBuilder(String.format("    sim.FEL.add(new %s({delay:0", eventName));
+        for (String argument : arguments) {
+            result.append(String.format(", %s: this.%s", argument, argument));
+        }
+        result.append("}));\n");
+        return result;
+    }
+
+    public static StringBuilder writeStatisticSetup(Map<String, List<String>> objAttrs, Map<String, String> names, Map<String, Double> attrInitials) {
+        StringBuilder result = new StringBuilder("sim.model.setupStatistics = function() {\n");
+        for (String objId : objAttrs.keySet()) {
+            String objName = names.get(objId);
+            for (String attrId : objAttrs.get(objId)) {
+                String attrName = names.get(attrId);
+                Double value = attrInitials.get(attrId);
+                result.append(String.format("    sim.stat.%s%s = %s;\n", objName, attrName, value));
+            }
+        }
+        result.append("};\n");
         return result;
     }
 
